Name:                type-level-datakinds
Version:             0.1
Synopsis:            Type-level programming with DataKinds
Description:         Type-level programming with DataKinds
License:             BSD3
License-file:        LICENSE
Author:              Reiner Pope
Maintainer:          reiner.pope@gmail.com
Copyright:           Copyright (C) 2012 Reiner Pope
Category:            Type System
Build-type:          Simple
Cabal-version:       >=1.6
homepage:            https://github.com/reinerp/type-level-datakinds
bug-reports:         https://github.com/reinerp/type-level-datakinds/issues

source-repository head
  type:                 git
  location:             git://github.com/reinerp/type-level-datakinds.git

Library
  Exposed-modules:     
    Types.Bool,
    Types.Common,
    Types.Nat,
    Types.Ord
  Build-depends:
    base >= 4.5 && <5,
    template-haskell < 2.9
